--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@types/jquery": "^3.5.30",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.9.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
@@ -38,17 +40,17 @@
     "typescript-eslint": "^8.3.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "webpack-remove-empty-scripts": "^1.0.4"
   },
   "dependencies": {
+    "core-js": "^3.38.1",
     "jquery": "^3.7.1"
   },
   "browserslist": [
-
-     "last 2 versions",
+    "last 2 versions",
     "android >= 4",
     "iOS >= 10",
     "not dead"
-  
   ]
 }
