--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@swc/core": "^1.7.21",
-    "@types/jquery": "^3.5.30",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
@@ -37,6 +36,7 @@
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "terser-webpack-plugin": "^5.3.10",
+    "typescript": "5.5",
     "typescript-eslint": "^8.3.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
@@ -44,8 +44,7 @@
     "webpack-remove-empty-scripts": "^1.0.4"
   },
   "dependencies": {
-    "core-js": "^3.38.1",
-    "jquery": "^3.7.1"
+    "core-js": "^3.38.1"
   },
   "browserslist": [
     "last 2 versions",
